--- a/app/views/concepts/edit.html.erb
+++ b/app/views/concepts/edit.html.erb
@@ -1,4 +1,4 @@
 <h1><%= t '.title' %></h1>
 <%= render 'form' %>
-<%= link_to t(:show), schools_url( @school ) %> |
-<%= link_to t(:back), schools_path %>
+<%= link_to t(:show), @concept %> |
+<%= link_to t(:back), concepts_path %>
