working on performance indicators

--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -98,7 +98,7 @@
                 <td><%= t 'experiences.not_started' %></td>
                 <td><%= t 'experiences.not_started' %></td>
               <% else #in progress %>
-                <td><%= reaction.status %></td>
+                <td><%= reaction.status %>%</td>
                 <td><%= reaction.narrative.scenario.behavior.name %></td>
                 <td><%= reaction.narrative.member %></td>
                 <td><%= t :n_a %></td>
