--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -146,7 +146,7 @@
             <td><%= t 'experience.simulation' %></td>
             <td>
               <em>
-                <%= reaction.status %>
+                <%= reaction.status %>% 
               </em>
             </td>
             <td> N/A</td>
