--- a/app/views/concepts/index.html.erb
+++ b/app/views/concepts/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 <% theme_code = @current_user.nil? ? "a" : @current_user.theme.code 
    anonymize = @current_user.anonymize? %>
+<%= page_entries_info @concepts %>
 <%= paginate @concepts %>
 <table data-role="table"
   id="basicTable"
