--- a/app/views/layouts/experiences.html.erb
+++ b/app/views/layouts/experiences.html.erb
@@ -2,7 +2,7 @@
 <html>
   <%= favicon_link_tag %>
   <head>
-    <title><%= t :title %> <%= " : " + @title unless @title.nil? %></title>
+    <title><%= t :title %> I like eggs<%= " : " + @title unless @title.nil? %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "installments_manifest" %>
