--- a/app/views/shared/_candidate_feedback.html.erb
+++ b/app/views/shared/_candidate_feedback.html.erb
@@ -1,6 +1,6 @@
 <p>
   <%= t 'candidate_lists.feedback_breakdown' %>
-  <% CandidateFeedback.find_each do |cf| %>
+  <% CandidateFeedback.all.each do |cf| %>
   <div data-role="collapsible">
     <h4>
       <%= cf.name %><%
