--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -216,7 +216,15 @@
         <td><%= activity.course.pretty_name false %></td>
         <td><%= activity.type %></td>
         <td><%= activity.end_date %></td>
-        <td><%= activity.status_for_user( @current_user ) %></td>
+        <td>
+          <% if activity.class.name == "BingoGame" %>
+            <%= activity.candidate_list_for_user( @current_user ).performance %>%
+          <% elsif activity.class.name == "Project" %>
+            <%= @current_user.get_assessment_performance( course_id: activity.course.id ) %>%
+          <% elsif activity.class.name == "Experience" %>
+            <%= @current_user.get_experience_performance( course_id: activity.course.id ) %>%
+          <% end %>
+        </td>
         <td>
         <% if activity.class.name == "BingoGame" %>
           <%= activity.candidate_list_for_user( @current_user ).get_concepts.count %> unique concepts
