--- a/app/views/bingo_games/review_candidates.html.erb
+++ b/app/views/bingo_games/review_candidates.html.erb
@@ -42,7 +42,7 @@
       count = 0
       candidate_feedbacks = CandidateFeedback.all
       %>
-      <% @bingo_game.candidates.completed.find_each do |candidate| %>
+      <% @bingo_game.candidates.includes(:user).completed.find_each do |candidate| %>
       <tr>
         <td><%= count += 1 %></td>
         <td><%= candidate.term %></td>
