--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -175,7 +175,7 @@
             </th>
           </thead>
           <tbody>
-          <% @current_user.courses.each do |course| %>
+          <% @current_user.courses.uniq.each do |course| %>
           <tr>
             <td><%= course.number %></td>
             <td><%= course.name %></td>
