--- a/app/views/administrative_mailer/re_invite.html.erb
+++ b/app/views/administrative_mailer/re_invite.html.erb
@@ -14,7 +14,7 @@
       <% end %>
     </ul>
     <P>
-      <%= t :course_invite_close, link_to( t( :title ), root_url ) %>
+      <%= raw( t :course_invite_close, link_to( t( :title ), root_url ) ) %>
     </p>
           
     <P><%= t :email_close %></p>
