--- a/app/views/administrative_mailer/summary_report.html.erb
+++ b/app/views/administrative_mailer/summary_report.html.erb
@@ -6,9 +6,9 @@
   <body>
     <h1><%= t 'home.greeting', name: @user.first_name %>.</h1>
     <p>
-      <%= t :summary_body, task_name: @name,
+      <%= raw( t :summary_body, task_name: @name,
                            course_name: @course_name,
-                           site_link: (link_to t( :title ), root_url) %>
+                           site_link: (link_to t( :title ), root_url) ) %>
       <%= t :enrolled_student, count: @completion_report.keys.count %>
     </P>
     <table>
