--- a/app/views/bingo_games/review_candidates.html.erb
+++ b/app/views/bingo_games/review_candidates.html.erb
@@ -43,7 +43,8 @@
       candidate_feedbacks = CandidateFeedback.all
       %>
       <% @bingo_game.candidates.
-        includes(:concept,candidate_list:[:group],user:[:emails]).
+        includes(:user, :concept,candidate_list:[:group]).
+        where( 'candidate_lists.is_group = 0 OR candidate_lists.group_id IS NOT NULL' ).
         completed.find_each do |candidate| %>
       <tr>
         <td><%= count += 1 %></td>
