--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -25,7 +25,9 @@
     <div id="participants" class="ui-body-<%= theme_code %> ui-content">
       <h2>Rosters</h2>
       <% @course.rosters.students.each do |roster| %>
-        <%= roster.user.name( anonymize ) %> <i><%= mail_to roster.user.email unless anonymize %></i> (<%= roster.role.name %> )<br>
+        <%= roster.user.name( anonymize ) %> <i><%= mail_to
+        roster.user.email unless anonymize %></i> (<%=
+        roster.role.humanize %> )<br>
       <% end %>
         <table data-role="table"
           id="basicTable"
@@ -76,10 +78,10 @@
           <%= roster.user.get_assessment_performance( course_id: @course.id) %>%
         </td>
         <td>
-          <%= roster.role.name %>
+          <%= roster.role.humanize %>
         </td>
         <td><%= link_to( t( 'courses.re_invite' ),
-              re_invite_student_path( roster.user ) ) unless roster.role.code == 'enr' %>&nbsp;|&nbsp;
+              re_invite_student_path( roster.user ) ) unless roster.role.enrolled_student? %>&nbsp;|&nbsp;
         <%= link_to t( 'courses.drop' ), drop_student_path( roster.id ) %></td>
       </tr>
     <% end %>
