--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -32,7 +32,7 @@
         <td><%= course.school.get_name( anonymize ) %></td>
         <td><%= l course.start_date, format: :tz_clarity %></td>
         <td><%= l course.end_date, format: :tz_clarity %></td>
-        <td><%= course.rosters.instructorships.count %></td>
+        <td><%= course.rosters.instructor.count %></td>
         <td><%= course.rosters.students.count %></td>
         <td><%= course.projects.count %></td>
         <td><%= course.experiences.count %></td>
