--- a/app/views/graphing/index.html.erb
+++ b/app/views/graphing/index.html.erb
@@ -9,23 +9,20 @@
     </select>
   </div>
 <% end %>
-<% GraphingController::Unit_To_Processing.each_with_index do |unit,index| %>
-  <div name="<%= unit %>_panel" id="<%= unit %>_panel" data-role="collapsible" data-mini="true" data-inset="false">
-    <h3><%= unit[ 0 ] %></h3>
+<% GraphingController::Unit_Of_Analysis.each do |unit| %>
+  <div name="<%= t unit[ 0 ] %>_panel" id="<%= unit[ 1 ] %>_panel" data-role="collapsible" data-mini="true" data-inset="false">
+    <h3><%= t unit[ 0 ] %></h3>
     <%= form_tag do %>
-      <fieldset class="ui-grid-b">
+      <fieldset class="ui-grid-a">
         <div class="ui-block-a">
-          <%= hidden_field_tag( :unit_of_analysis, unit[ 0 ] ) %>
+          <%= hidden_field_tag( :unit_of_analysis, unit[ 1 ] ) %>
           <%= label_tag(:assessment, t('.which')) %>
         </div>
         <div class="ui-block-b">
           <%= label_tag(:subject, t('.who' ))%>
         </div>
-        <div class="ui-block-c">
-          <%= label_tag( :data_processing, t('.what_data')) %>
-        </div>
       </fieldset>
-      <fieldset class="ui-grid-b">
+      <fieldset class="ui-grid-a">
         <div class="ui-block-a">
 	<% projects = @current_users_projects.collect{ |project| [project.get_name( anonymize ), project.id] }
 	projects.insert( 0, [ t( :none_selected ), -1] ) %>
@@ -38,14 +35,7 @@
           <%= select_tag :subject, options_for_select( [ [ t(:not_available), -1] ] ),
             :data => {:mini => true}, :class => "submitting_select" %>
         </div>
-        <div class="ui-block-c">
-          <%= select_tag :data_processing, options_for_select( unit[ 1 ] ),
-            :data => {:mini => true}, :class => "submitting_select" %>
-        </div>
       </fieldset>
-      <div id="chart_container_<%= index %>" name="chart_container_<%= index %>"
-        class="chart" style="width: 100%; height: 400px" chart_num="<%= index %>"></div>
-      <div id="detail_container"></div>
     <% end %>
   </div>
 <% end %>
