--- a/app/views/graphing/index.html.erb
+++ b/app/views/graphing/index.html.erb
@@ -16,6 +16,7 @@
       <fieldset class="ui-grid-a">
         <div class="ui-block-a">
           <%= hidden_field_tag( :unit_of_analysis, unit[ 1 ] ) %>
+          <%= hidden_field_tag( :local_chart,  "#{unit[ 0 ]}_graph" ) %>
           <%= label_tag(:assessment, t('.which')) %>
         </div>
         <div class="ui-block-b">
@@ -36,6 +37,7 @@
             :data => {:mini => true}, :class => "submitting_select" %>
         </div>
       </fieldset>
+      <div id="graph_div"></div>
     <% end %>
   </div>
 <% end %>
